# fripack

./: .gitignore  Cargo.toml  README.md  README_zh.md  fripack.json
.github/workflows/: ci.yml
src/: binary.rs  builder.rs  config.rs  downloader.rs  main.rs
