[package]
name = "fripack"
version = "0.1.0"
edition = "2021"
authors = ["MicroBlock"]
description = "A cross-platform CLI tool for building Frida-based packages"
license = "MIT"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }

# JSON5 parsing support
json5 = "0.4"

# Colored terminal output
colored = "2.0"

# HTTP client for downloading prebuilt files
reqwest = { version = "0.11", features = ["json", "stream"] }

# Progress bars for downloads
indicatif = "0.17"

# File system operations
walkdir = "2.3"

# Path manipulation
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
tempfile = "3.8"

# Binary manipulation
object = { git = "https://github.com/gimli-rs/object/", features = ["build", "write"] }
object-rewrite = "*"

# XZ compression
xz2 = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
log = "0.4"
env_logger = "0.10"

# File I/O
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
byteorder = "1.5.0"
memchr = "2.7.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
